fix top nav jumping issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,12 @@
  *= require_tree .
  */
 
+
+body {
+  zoom: 1;
+  padding-top: 45px;
+}
+
 .main {
   margin: 15px auto;
 }
